nag-collapse now clears float (an issue in FF)

--- a/css/citylink-rl.scss
+++ b/css/citylink-rl.scss
@@ -58,6 +58,7 @@ p {
   background-color: $yellow;
   padding: 30px;
   color: $green;
+  clear: both;
 }
 .nav>li>a:hover, .nav>li>a:focus {
   background-color: $green;
